--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,8 +130,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Maps/MainMenu
-MRUItem1=/Game/Maps/SurBoxWorld
+MRUItem0=/Game/Maps/SurBoxWorld
+MRUItem1=/Game/Maps/MainMenu
 MRUItem2=/Game/SurBoxWorld
 
 [DetailCustomWidgetExpansion]
@@ -214,7 +214,7 @@ TemplateSequenceEditorSettings=IOSRuntimeSettings.Build.Remote Build Options,Inp
 UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 PlayerCharacter_C=
-CapsuleComponent=PlayerCharacter_C.Rendering.LOD,
+CapsuleComponent=
 BrushComponent=
 Brush=PlayerCharacter_C.Rendering.LOD,
 PlayerStart=PlayerCharacter_C.Rendering.LOD,
@@ -243,9 +243,11 @@ Actor=PlayerCharacter_C.Rendering.LOD,
 CameraActor=PlayerCharacter_C.Rendering.LOD,
 SceneCaptureCube=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Post Processing Show Flags,SceneCaptureCube.SceneCapture.Light Types Show Flags,SceneCaptureCube.SceneCapture.Lighting Components Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,SceneCaptureCube.SceneCapture.Hidden Show Flags,
 SceneCapture2D=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Post Processing Show Flags,SceneCaptureCube.SceneCapture.Light Types Show Flags,SceneCaptureCube.SceneCapture.Lighting Components Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,SceneCaptureCube.SceneCapture.Hidden Show Flags,
+LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+Landscape=PlayerCharacter_C.Rendering.LOD,
 
 [EditorStartup]
-LastLevel=/Game/Maps/MainMenu
+LastLevel=/Game/Maps/SurBoxWorld
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1262,6 +1264,31 @@ Texture2D.File Path=True
 Texture2D.Adjustments=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compositing=True
+LandscapeEditorObject.New Landscape=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Target Layers=True
+Landscape.TransformCommon=True
+Landscape.Information=True
+Landscape.LOD=True
+Landscape.Landscape=True
+Landscape.LOD Distribution=True
+Landscape.Tessellation=True
+Landscape.Lighting=True
+Landscape.VirtualTexture=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Replication=True
+Landscape.Input=True
+Landscape.Actor=True
+MaterialExpressionWorldPosition.UMaterialExpressionWorldPosition=True
+MaterialExpressionWorldPosition.MaterialExpression=True
+MaterialExpressionDDX.MaterialExpression=True
+MaterialExpressionDDY.MaterialExpression=True
+MaterialExpressionCrossProduct.MaterialExpression=True
+MaterialExpressionNormalize.MaterialExpression=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1269,26 +1296,26 @@ OpenAssetsAtExit=/Game/Blueprints/PlayerCharacter.PlayerCharacter
 OpenAssetsAtExit=/Game/UI/MainMenuUI.MainMenuUI
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/MainMenuUI
-MRUItem1=/Game/Materials/MainMenuMat
-MRUItem2=/Game/Blueprints/PlayerCharacter
-MRUItem3=/Game/Textures/ButtonPressed
-MRUItem4=/Game/Textures/ButtonHovered
-MRUItem5=/Game/Textures/ButtonNormal
-MRUItem6=/Game/Textures/MainMenuBackground
-MRUItem7=/Game/Textures/MainMenuBackgroundMat
-MRUItem8=/Game/Textures/MainMenuTexture
-MRUItem9=/Game/Maps/MainMenu
-MRUItem10=/Game/Maps/SurBoxWorld
-MRUItem11=/Game/Materials/SkyboxMat
-MRUItem12=/Engine/EngineSky/M_Sky_Panning_Clouds2
-MRUItem13=/Game/Blueprints/Skybox
-MRUItem14=/Engine/EngineSky/BP_Sky_Sphere
-MRUItem15=/Game/MainMenu/W_ServerSlot
-MRUItem16=/Game/MainMenu/W_ServerBrowser
-MRUItem17=/Game/MainMenu/w_MainMenu
-MRUItem18=/Game/Maps/SurBoxGameInstance
-MRUItem19=/Game/GameMode/SurBoxMode
+MRUItem0=/Game/Materials/TerrainMat
+MRUItem1=/Game/Maps/SurBoxWorld
+MRUItem2=/Game/Maps/MainMenu
+MRUItem3=/Game/UI/MainMenuUI
+MRUItem4=/Game/Materials/MainMenuMat
+MRUItem5=/Game/Blueprints/PlayerCharacter
+MRUItem6=/Game/Textures/ButtonPressed
+MRUItem7=/Game/Textures/ButtonHovered
+MRUItem8=/Game/Textures/ButtonNormal
+MRUItem9=/Game/Textures/MainMenuBackground
+MRUItem10=/Game/Textures/MainMenuBackgroundMat
+MRUItem11=/Game/Textures/MainMenuTexture
+MRUItem12=/Game/Materials/SkyboxMat
+MRUItem13=/Engine/EngineSky/M_Sky_Panning_Clouds2
+MRUItem14=/Game/Blueprints/Skybox
+MRUItem15=/Engine/EngineSky/BP_Sky_Sphere
+MRUItem16=/Game/MainMenu/W_ServerSlot
+MRUItem17=/Game/MainMenu/W_ServerBrowser
+MRUItem18=/Game/MainMenu/w_MainMenu
+MRUItem19=/Game/Maps/SurBoxGameInstance
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1556,7 +1583,7 @@ Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal
 /Game/Materials/MainMenuMat.MainMenuMat=0
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LightingResults
 
 [RootWindow]
 ScreenPosition=X=505.000 Y=124.000
@@ -2672,4 +2699,36 @@ bAutoDeleteAssets=True
 bDetectChangesOnStartup=True
 bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
+
+[LandscapeEdit]
+ToolStrength=0.585715
+BrushRadius=2062.510498
+BrushComponentSize=8
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200.000000
+bUseFlattenTarget=False
+FlattenTarget=0.000000
+TerraceSmooth=0.000100
+TerraceInterval=1.000000
+RampWidth=2000.000000
+RampSideFalloff=0.400000
+bCombinedLayersOperation=True
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
+
+[FoliageEdit]
+WindowPosition=-1,-1,284,400
+bFilterFoliage=False
+bShowPaletteItemDetails=True
+bShowPaletteItemTooltips=True
+ActivePaletteViewMode=0
+PaletteThumbnailScale=0.300000
+IsInSingleInstantiationMode=False
+IsInSpawnInCurrentLevelMode=False
+SingleInstantiationPlacementMode=0
 
