--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,8 +130,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Maps/SurBoxWorld
-MRUItem1=/Game/Maps/MainMenu
+MRUItem0=/Game/Maps/MainMenu
+MRUItem1=/Game/Maps/SurBoxWorld
 MRUItem2=/Game/SurBoxWorld
 
 [DetailCustomWidgetExpansion]
@@ -215,10 +215,10 @@ UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 PlayerCharacter_C=
 CapsuleComponent=
-BrushComponent=PlayerCharacter_C.Rendering.LOD,
+BrushComponent=
 Brush=PlayerCharacter_C.Rendering.LOD,
 PlayerStart=PlayerCharacter_C.Rendering.LOD,
-SceneComponent=
+SceneComponent=PlayerCharacter_C.Rendering.LOD,
 BP_Sky_Sphere_C=PlayerCharacter_C.Rendering.LOD,
 SphereComponent=PlayerCharacter_C.Rendering.LOD,
 DefaultPawn=PlayerCharacter_C.Rendering.LOD,
@@ -235,19 +235,20 @@ TakeRecorderWorldSourceSettings=
 w_MainMenu_C=
 W_ServerSlot_C=
 W_ServerBrowser_C=
-Skybox_C=PlayerCharacter_C.Rendering.LOD,
+Skybox_C=PlayerCharacter_C.Rendering.LOD,SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Post Processing Show Flags,SceneCaptureCube.SceneCapture.Light Types Show Flags,SceneCaptureCube.SceneCapture.Lighting Components Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,SceneCaptureCube.SceneCapture.Hidden Show Flags,
 ConcertClientConfig=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 ConcertSyncConfig=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 MainMenuUI_C=
 Actor=PlayerCharacter_C.Rendering.LOD,
 CameraActor=PlayerCharacter_C.Rendering.LOD,
 SceneCaptureCube=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Post Processing Show Flags,SceneCaptureCube.SceneCapture.Light Types Show Flags,SceneCaptureCube.SceneCapture.Lighting Components Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,SceneCaptureCube.SceneCapture.Hidden Show Flags,
-SceneCapture2D=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Post Processing Show Flags,SceneCaptureCube.SceneCapture.Light Types Show Flags,SceneCaptureCube.SceneCapture.Lighting Components Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,SceneCaptureCube.SceneCapture.Hidden Show Flags,
+SceneCapture2D=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Post Processing Show Flags,SceneCaptureCube.SceneCapture.Light Types Show Flags,SceneCaptureCube.SceneCapture.Lighting Components Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,SceneCaptureCube.SceneCapture.Hidden Show Flags,PlayerCharacter_C.Rendering.LOD,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 Landscape=PlayerCharacter_C.Rendering.LOD,
+PostProcessVolume=PlayerCharacter_C.Rendering.LOD,
 
 [EditorStartup]
-LastLevel=/Game/Maps/SurBoxWorld
+LastLevel=/Game/Maps/MainMenu
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1304,34 +1305,34 @@ MaterialExpressionScalarParameter.MaterialExpression=True
 MaterialExpressionScalarParameter.CustomPrimitiveData=True
 MaterialExpressionSceneTexture.UMaterialExpressionSceneTexture=True
 MaterialExpressionSceneTexture.MaterialExpression=True
+Actor.Replication=True
+MaterialExpressionDesaturation.MaterialExpressionDesaturation=True
+MaterialExpressionDesaturation.MaterialExpression=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/PlayerCharacter.PlayerCharacter
-OpenAssetsAtExit=/Game/Materials/ToonShader.ToonShader
-OpenAssetsAtExit=/Game/UI/MainMenuUI.MainMenuUI
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/ToonShader
-MRUItem1=/Game/Materials/TerrainMat
-MRUItem2=/Game/Maps/SurBoxWorld
-MRUItem3=/Game/Maps/MainMenu
-MRUItem4=/Game/UI/MainMenuUI
-MRUItem5=/Game/Materials/MainMenuMat
-MRUItem6=/Game/Blueprints/PlayerCharacter
-MRUItem7=/Game/Textures/ButtonPressed
-MRUItem8=/Game/Textures/ButtonHovered
-MRUItem9=/Game/Textures/ButtonNormal
-MRUItem10=/Game/Textures/MainMenuBackground
-MRUItem11=/Game/Textures/MainMenuBackgroundMat
-MRUItem12=/Game/Textures/MainMenuTexture
-MRUItem13=/Game/Materials/SkyboxMat
-MRUItem14=/Engine/EngineSky/M_Sky_Panning_Clouds2
-MRUItem15=/Game/Blueprints/Skybox
-MRUItem16=/Engine/EngineSky/BP_Sky_Sphere
-MRUItem17=/Game/MainMenu/W_ServerSlot
-MRUItem18=/Game/MainMenu/W_ServerBrowser
-MRUItem19=/Game/MainMenu/w_MainMenu
+MRUItem0=/Game/UI/ServerBrowser
+MRUItem1=/Game/Materials/SkyboxMat
+MRUItem2=/Game/Blueprints/Skybox
+MRUItem3=/Game/UI/MainMenuUI
+MRUItem4=/Game/Maps/MainMenu
+MRUItem5=/Game/Maps/SurBoxWorld
+MRUItem6=/Game/Materials/ToonShader
+MRUItem7=/Game/Materials/TerrainMat
+MRUItem8=/Game/Materials/MainMenuMat
+MRUItem9=/Game/Blueprints/PlayerCharacter
+MRUItem10=/Game/Textures/ButtonPressed
+MRUItem11=/Game/Textures/ButtonHovered
+MRUItem12=/Game/Textures/ButtonNormal
+MRUItem13=/Game/Textures/MainMenuBackground
+MRUItem14=/Game/Textures/MainMenuBackgroundMat
+MRUItem15=/Game/Textures/MainMenuTexture
+MRUItem16=/Engine/EngineSky/M_Sky_Panning_Clouds2
+MRUItem17=/Engine/EngineSky/BP_Sky_Sphere
+MRUItem18=/Game/MainMenu/W_ServerSlot
+MRUItem19=/Game/MainMenu/W_ServerBrowser
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1432,7 +1433,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [DetailMultiObjectNodeExpansion]
-CryptoKeysSettings=True
+CryptoKeysSettings=False
 GeneralProjectSettings=True
 ProjectPackagingSettings=True
 HardwareTargetingSettings=True
@@ -1575,14 +1576,14 @@ LuminRuntimeSettings="\"Object.Audio.Audio|CookOverrides\" "
 UdpMessagingSettings="\"Object.Transport.StaticEndpoints\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" "
 Spacer="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
 Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" "
 Border="\"Object.Appearance.Background\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
@@ -1601,9 +1602,10 @@ Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Objec
 /Game/Textures/ButtonPressed.ButtonPressed=1
 /Game/Materials/MainMenuMat.MainMenuMat=0
 /Game/Materials/TerrainMat.TerrainMat=0
+/Game/Materials/SkyboxMat.SkyboxMat=1
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=LoadErrors
 
 [RootWindow]
 ScreenPosition=X=505.000 Y=124.000
@@ -2634,7 +2636,6 @@ ChangeVariableType_Warning=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
